tests/errors/pat_variant_fun_without_payload_err/pat_variant_fun_without_payload_err.c
#error pat_variant_fun_without_payload_err.pat_variant_fun_without_payload_err:13:5 Type mismatch: 'string -> option<string>' <> 'option<?166>'.
#error pat_variant_fun_without_payload_err.pat_variant_fun_without_payload_err:13:5 Variant with payload must be used in the form of: `Variant pattern`.
#error pat_variant_fun_without_payload_err.pat_variant_fun_without_payload_err:17:5 Type mismatch: 'int -> IntWrapper' <> 'IntWrapper'.
#error pat_variant_fun_without_payload_err.pat_variant_fun_without_payload_err:17:5 Variant with payload must be used in the form of: `Variant pattern`.
